Upgrade to different node plugin